--- a/style.css
+++ b/style.css
@@ -35,11 +35,13 @@ body {
 #main img{
   border-radius: 50%;
   border: 2px solid black;
-  margin: 30px;
+  margin: 50px;
+  margin-bottom: 30px;
 }
 #Hello{
   font-size: 60px;
-  margin: auto;
+  font-weight: bold;
+  margin: 10px;
   margin-top: 90px;
 }
 #Hello>p{
@@ -59,6 +61,7 @@ body {
 }
 #middle3 {
   font-size: 2vw;
+  font-weight: bold;
   color: rgb(213,213,213);
   text-align: center;
   margin-top: 30px;
@@ -88,7 +91,7 @@ article h2 {
   text-align: center;
 }
 #About {
-  margin: auto;
+  text-align: center;
   padding: 0px;
   margin-top: 100px;
   display: flex;
