--- a/style.css
+++ b/style.css
@@ -91,10 +91,11 @@ article h2 {
   text-align: center;
 }
 #About {
-  text-align: center;
-  padding: 0px;
+  margin: auto;
   margin-top: 100px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 80%;
 }
 #About .about_text {
   text-align: center;
