--- a/style.css
+++ b/style.css
@@ -24,13 +24,14 @@ body {
   color: white;
 }
 .middle1{
-  padding-top: 100px;
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
 }
 #main{
   display: grid;
   grid-template-columns: 1fr 2fr;
+  padding-right: 150px;
+  padding-left: 150px;
 }
 #main img{
   border-radius: 50%;
