--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body {
 #main{
   display: grid;
   grid-template-columns: 1fr 2fr;
+  margin-top: 100px;
+  margin-bottom: 70px;
   padding-right: 150px;
   padding-left: 150px;
 }
